Fri Mar 24 23:51:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kerberos5.c (kerberos5_send): Initialize auth_context to zero
		before calling mk_req.

Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)

        * kerberos5.c Use new calling convention for krb5_mk_req_extended().

Tue Mar  7 19:52:00 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS, ISODE_INCLUDE.

Tue Feb 28 01:48:32 1995  John Gilmore  (gnu at toad.com)

	* forward.c, kerberos5.c:  Avoid <krb5/...> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * kerberos5.c (kerberos5_send(), kerberos5_forward()) 
		Call krb5_get_credentials() and krb5_mk_req_extended() 
		with new calling convention.

Thu Feb  2 02:56:50 1995  John Gilmore  <gnu@cygnus.com>

	* forward.c:  Remove unused #include <krb5/crc-32.h>.
	* kerberos5.c (kerberos5_send):  Remove code for sending a checksum
	of a zero-byte string; we can just send no checksum at all.  This
	eliminates dependency on <krb5/crc-32.h>.
	(kerberos5_forward):  Remove extra parameter to krb5_get_for_creds,
	probably accidentally inserted during context changes -- which don't
	seem to be here in the ChangeLog.
	* kerberos.c:  Remove prototypes for krb4 functions, since
	some of them are wrong with CNS (u_long vs. KRB_INT32 conflicts).

Fri Nov 18 15:19:26 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos5.c (kerberos5_init): Initialize magic variable and
		encryption type.  

Fri Nov 18 00:37:13 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use WITH_KRB4. (from epeisach)

Mon Nov 14 16:27:29 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos.c (kerberos4_is): Initialize random number generator on
		the server side so that the encryption routines later on
		can use it. 

	* kerberos.c (kerberos4_send): Fix bug in how we pick the
		challenge for the challenge/response mutual
		authentication.

Fri Nov 11 00:55:36 1994  Theodore Y. Ts'o  (tytso@dcl)
