@@ -1,3 +1,8 @@
+Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)
+
+        * kerberos5.c (kerberos5_is()): Use new calling convention for 
+		krb5_rd_req(), and krb5_mk_rep().
+
 Fri Mar 24 23:51:18 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* kerberos5.c (kerberos5_send): Initialize auth_context to zero
@@ -5,7 +10,7 @@ Fri Mar 24 23:51:18 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)
 
-        * kerberos5.c Use new calling convention for krb5_mk_req_extended().
+        * kerberos5.c: Use new calling convention for krb5_mk_req_extended().
 
 Tue Mar  7 19:52:00 1995  Mark Eichin  <eichin@cygnus.com>
 
